--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "htactive-react-todolist",
+  "name": "htactive-react-todolist-router",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://vanthudkr.github.io/htactive-react-todolist-router/",
